--- a/requirements.txt
+++ b/requirements.txt
@@ -1,228 +1,8 @@
-absl-py==1.3.0
-aiohttp==3.9.0
-aiosignal==1.3.1
-alembic==1.9.1
-aniso8601==9.0.1
-annotated-types==0.5.0
-asgiref==3.6.0
-asttokens==2.2.1
-astunparse==1.6.3
-async-timeout==4.0.3
-attrs==22.1.0
-autopep8==2.0.0
-backcall==0.2.0
-bcrypt==4.0.1
-bidict==0.22.1
-blis==0.7.11
-boto3==1.24.24
-botocore==1.27.24
-cachetools==5.2.0
-catalogue==2.0.9
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
+blinker==1.7.0
+click==8.1.7
 colorama==0.4.6
-commonmark==0.9.1
-comtypes==1.1.14
-confection==0.1.3
-contourpy==1.0.6
-cv==1.0.0
-cvzone==1.5.6
-cycler==0.11.0
-cymem==2.0.8
-datasets==2.15.0
-debugpy==1.6.4
-decorator==4.4.2
-dill==0.3.6
-distro==1.8.0
-Django==4.2
-dnspython==2.2.1
-easyocr==1.6.2
-email-validator==1.3.0
-entrypoints==0.4
-executing==1.2.0
-fastjsonschema==2.16.3
-filelock==3.13.1
-filestack-python==3.5.0
-Flask==2.2.2
-Flask-Bcrypt==1.0.1
-Flask-Dance==6.2.0
-Flask-JWT==0.3.2
-Flask-JWT-Extended==4.4.4
-Flask-Login==0.6.2
-Flask-Migrate==4.0.0
-Flask-RESTful==0.3.9
-Flask-SQLAlchemy==3.0.2
-Flask-WTF==1.0.1
-flatbuffers==22.11.23
-fonttools==4.38.0
-frozenlist==1.4.0
-fsspec==2023.10.0
-gast==0.4.0
-gensim==4.3.2
-google-auth==2.15.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.2
-grpcio==1.51.1
-gTTS==2.2.4
-gunicorn==20.1.0
-h5py==3.7.0
-huggingface-hub==0.19.4
-idna==3.4
-imageio==2.22.4
-imageio-ffmpeg==0.4.7
-ipykernel==6.17.1
-ipython==8.7.0
+Flask==3.0.1
 itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonschema==4.17.3
-jupyter_client==7.4.8
-jupyter_core==5.1.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-langcodes==3.3.0
-lazy_loader==0.2
-libclang==14.0.6
-loguru==0.6.0
-lxml==4.9.1
-Mako==1.2.4
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mediapipe==0.9.0.1
-MiniSom==2.3.0
-moviepy==1.0.3
-multidict==6.0.4
-multiprocess==0.70.14
-murmurhash==1.0.10
-nbformat==5.8.0
-nest-asyncio==1.5.6
-networkx==3.1
-ninja==1.11.1
-nltk==3.8.1
-numpy==1.23.5
-oauthlib==3.2.2
-opencv-python-headless==4.5.4.60
-opt-einsum==3.3.0
-packaging==21.3
-palettable==3.3.3
-pandas==1.5.2
-parso==0.8.3
-pathos==0.3.0
-pathy==0.10.2
-pickleshare==0.7.5
-Pillow==9.3.0
-platformdirs==2.5.4
-playwright==1.23.0
-plotly==5.14.1
-pox==0.3.2
-ppft==1.7.6.6
-praw==7.6.0
-prawcore==2.3.0
-preshed==3.0.9
-proglog==0.1.10
-prompt-toolkit==3.0.33
-protobuf==3.19.6
-psutil==5.9.4
-pure-eval==0.2.2
-pyarrow==14.0.1
-pyarrow-hotfix==0.5
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycaw==20220416
-pyclipper==1.3.0.post4
-pycodestyle==2.10.0
-pydantic==2.3.0
-pydantic_core==2.6.3
-pyee==8.1.0
-PyExecJS==1.5.1
-Pygments==2.13.0
-PyJWT==2.6.0
-pyparsing==3.0.9
-pypiwin32==223
-PyQt5==5.15.9
-PyQt5-Qt5==5.15.2
-PyQt5-sip==12.12.2
-pyrsistent==0.19.3
-python-bidi==0.4.2
-python-dateutil==2.8.2
-pyttsx3==2.90
-pytube==12.1.0
-pytz==2022.6
-PyWavelets==1.4.1
-pywin32==305
-PyYAML==6.0
-pyzmq==24.0.1
-regex==2023.8.8
-reportlab==4.0.6
-requests==2.28.1
-requests-oauthlib==1.3.1
-rich==12.5.1
-rsa==4.9
-s3transfer==0.6.0
-safetensors==0.4.0
-scikit-build==0.16.3
-scikit-image==0.20.0
-scikit-learn==1.1.3
-scikit-plot==0.3.7
-scipy==1.9.3
-seaborn==0.12.1
-shapely==2.0.1
-six==1.16.0
-smart-open==6.4.0
-spacy==3.6.1
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==1.4.45
-sqlparse==0.4.4
-srsly==2.4.8
-stack-data==0.6.2
-tabulate==0.9.0
-tenacity==8.2.2
-tensorboard==2.10.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.10.0
-tensorflow-gpu==2.10.1
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.28.0
-termcolor==2.1.1
-thinc==8.1.12
-threadpoolctl==3.1.0
-tifffile==2023.4.12
-tokenizers==0.15.0
-toml==0.10.2
-tomli==2.0.1
-torch==1.13.0
-torchaudio==0.13.0
-torchvision==0.14.0
-tornado==6.2
-tqdm==4.64.1
-trafaret==2.0.2
-traitlets==5.6.0
-transformers @ git+https://github.com/huggingface/transformers.git@d1a00f9dd0b851245e4a54cbd70816a80e781ec2
-translators==5.3.1
-typer==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-update-checker==0.18.0
-urllib3==1.26.13
-URLObject==2.4.3
-wasabi==1.1.2
-wcwidth==0.2.5
-websocket-client==1.4.2
-websockets==10.1
-Werkzeug==2.2.2
-win32-setctime==1.1.0
-wordcloud==1.9.2
-wrapt==1.14.1
-WTForms==3.0.1
-xxhash==3.4.1
-yarl==1.9.2
+Jinja2==3.1.3
+MarkupSafe==2.1.4
+Werkzeug==3.0.1
